fix(#5587): exponential backoff with full jitter for transaction retries (#6078)
(cherry picked from commit e76802feedd1e167efb911fa0477e3743f01e48f)